<resources>
    <string name="app_name">Music Player</string>
    <string name="Shuffle_btn">Shuffle </string>
    <string name="Favourites_btn">Favourites</string>
    <string name="Playlist_btn">Playlists</string>
    <string name="total_songs">Total_Songs</string>
    <string name="World_of_Music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00 00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">equailzer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedbcack</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

</resources>