<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <Button
        android:id="@+id/shuffle_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Shuffle"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableTop="@drawable/shuffle_icon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/Shuffle_btn"/>
    <Button
        android:id="@+id/favourite_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Favourite"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableTop="@drawable/favourite_icon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/Favourites_btn"/>

    <Button
        android:id="@+id/playlist_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="Playlist"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawableTop="@drawable/playlist_icon"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/Playlist_btn"/>

  </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/total_songs"
        android:layout_width="match_parent"
        android:text="@string/total_songs"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicRV"
        android:padding="10dp"
        android:layout_below="@id/total_songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </RelativeLayout>

  </RelativeLayout>

  <com.google.android.material.navigation.NavigationView
      android:id="@+id/navigationView"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:visibility="visible"
      android:fitsSystemWindows="true"
      app:headerLayout="@layout/nav_header"
      app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>