<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/World_of_Music"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <ImageButton
            android:layout_width="60dp"
            android:scaleType="centerCrop"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/favourite_icon"
            app:tint="#3C3C40" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeWidth="5dp"
        android:src="@drawable/musical_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/back_icon"
            app:iconSize="40dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_icon"
            app:shapeAppearanceOverlay="@style/curved"
            android:layout_margin="10dp"
            android:backgroundTint="#EA4C4C"
            app:iconTint="@color/white"
            app:iconSize="50dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/forward_icon"
            app:iconSize="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_tv"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_tv"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/repeat_icon"
            android:background="@android:color/transparent"
            app:tint="@color/red" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:src="@drawable/equalizer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/red" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:src="@drawable/timer_icon"
            android:background="@android:color/transparent"
            app:tint="@color/red" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:src="@drawable/share_icon"
            android:background="@android:color/transparent"
            app:tint="@color/red" />

    </LinearLayout>

</LinearLayout>